# awww-5

./: .gitignore  pyproject.toml
pictures/: db.sqlite3  manage.py
pictures/cms/: admin.py  forms.py  models.py  urls.py  views.py
pictures/cms/management/commands/: genpics.py
pictures/cms/migrations/: 0001_initial.py  0002_picture_name.py  0003_picture_date_added_picture_description_picture_tags.py  0004_alter_picture_description.py
pictures/cms/static/cms/: style.css
pictures/cms/templates/: base.html  edit.html  picture.html  pictures.html
pictures/pictures/: asgi.py  settings.py  urls.py  wsgi.py
