[tool.poetry]
name = "awww-5"
version = "0.1.0"
description = ""
authors = ["Paweł Zając <pavlzayac@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
